[package]
name = "mongo-client-desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
iced = { version = "= 0.9.0", features = ["smol", "canvas", "tokio", "debug"] }
iced_native = "= 0.10.3"
time = { version = "= 0.3.17", features = ["local-offset"] }